add guest options
